--- a/t4-rez-de-jardin.html
+++ b/t4-rez-de-jardin.html
@@ -48,23 +48,23 @@ services:
   <div class="container p-4">
     <div class="row gx-5">
       <div class="col text-center">
-        <p class="px-3 fw-bolder">90m²</p>
+        <p class="px-3 fw-bolder  text-reset">90m²</p>
         <p class="pbx-3 fw-light">Jardin</p>
       </div>
       <div class="col text-center">
-        <p class="px-3 fw-bolder">85m²</p>
+        <p class="px-3 fw-bolder text-reset">85m²</p>
         <p class="pbx-3 fw-light">Surface</p>
       </div>
       <div class="col text-center">
-        <p class="px-3 fw-bolder">8-10 personnes</p>
+        <p class="px-3 fw-bolder text-reset">8-10 personnes</p>
         <p class="pbx-3 fw-light">Capacité</p>
       </div>
       <div class="col text-center">
-        <p class="px-3 fw-bolder">3</p>
+        <p class="px-3 fw-bolder text-reset">3</p>
         <p class="pbx-3 fw-light">Chambres</p>
       </div>
       <div class="col text-center">
-        <p class="px-3 fw-bolder">1</p>
+        <p class="px-3 fw-bolder text-reset">1</p>
         <p class="pbx-3 fw-light">Chambre mezzanine</p>
       </div>
     </div>
@@ -111,7 +111,7 @@ services:
       <div class="row">
         <div class="col">
           <h3>Description</h3>
-          <p class="fs-6">
+          <p class="fs-6 text-reset">
             Appartement T4 situé en rez-de-jardin comportant une grande cuisine toute équipée, ouverte sur la salle à manger. Le salon est surplombé par une mezzanine, vous offrant un couchage d’appoint (140 x 200) ainsi qu’un coin jeux pour les enfants.
             <br/><br/>
             Au niveau chambres à coucher, il y a 3 chambres équipées de lit double et panderie. Toutes les chambres sont climatisées individuellement.
@@ -123,7 +123,7 @@ services:
         </div>
         <div class="col">
           <h3>Jardin privatif</h3>
-          <p class="fs-6">
+          <p class="fs-6 text-reset">
             Pour accompagner l’appartement T4, un jardin de 90 m² indépendant exposé au Sud, fermé par un portail et bordé par une haie de cannes à sucres. Présence d’un cerisier et d’un citronnier quatre saisons. Aménagé avec un abri vélos, une table d’extérieur, des chaises longues et un barbecue.
           </p>
         </div>
@@ -151,7 +151,7 @@ services:
 
             <div class="flex-grow-1 ms-3">
               <h4 class="text-uppercase fs-5 text">{{ service.title }}</h4>
-              <p class="fs-6 text">{{ service.text }}</p>
+              <p class="fs-6 text text-reset">{{ service.text }}</p>
             </div>
           </div>
           <!-- End Icon Blocks -->
