Change navigation and icons t4

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
 heading: Contactez-nous
-description: Utilisez ce formulaire pour faire une demande de renseignments. Vous pouvez aussi nous contacter par téléphone.
+description: Appelez ou envoyez un SMS pour faire une demande de renseignments.
 
 map:
   latitude: 43.131405858637656
@@ -34,8 +34,8 @@ map:
 	{% endif %}
 
 	<div class="contact-details">
-		<h3 class="editable">Adresse</h3>
-		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
+		<h3>Adresse</h3>
+		<address><a target="_blank" href="https://g.page/LaGrandeBastideLavandou?share">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 		<h3>Téléphone</h3>
 
 		<p>+33 7 86 21 19 97</p>
