Fix home page services

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@ services:
     - service2:
       title: Multimédia
       icon: wifi
-      text: Accédez gratuitement au WiFi et bien plus encore.
+      text: WiFi gratuit et bien plus encore.
     - service3:
       title: We speak English
       icon: language
       text: Poeple from all other the world are welcome.
   - row:
     - service4:
-      title: Cuisine équipée
-      icon: utensils
-      text: Préparez des repas entre amis ou en famille.
+      title: Jardin privatif
+      icon: sun
+      text: Chaque appartement possède son propre jardin équipé pour se détendre.
     - service5:
-      title: Multimédia
-      icon: wifi
-      text: Accédez gratuitement au WiFi et bien plus encore.
+      title: Situation
+      icon: map-marker-alt
+      text: Location au Lavandou à quelques minutes des différentes plages.
     - service6:
-      title: We speak English
-      icon: language
-      text: Poeple from all other the world are welcome.
+      title: 24/7
+      icon: clock
+      text: Vous pouvez contacter la Grande Bastide quand vous le souhaitez.
 leLavandou:
   - point: 
     name: Plages
