Upload new images

--- a/index.html
+++ b/index.html
@@ -54,15 +54,21 @@ leLavandou:
 	<div class="swiper">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide"><img
-					src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-terrasse.jpg"
-					alt="La Grande Bastide - Terrasse">
+				src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-terrasse.webp"
+				alt="La Grande Bastide - Terrasse">
 			</div>
 			<div class="swiper-slide"><img
-					src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-cuisine.jpg"
-					alt="La Grande Bastide - Cuisine"></div>
+					src="{{ site.baseurl }}/assets/images/Entrée - La Grande Bastide - Le Lavandou.webp"
+					alt="La Grande Bastide - Entrée">
+			</div>
 			<div class="swiper-slide"><img
-					src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-salon.jpg"
-					alt="La Grande Bastide - Salon"></div>
+					src="{{ site.baseurl }}/assets/images/Cuisine - La Grande Bastide - Le Lavandou.webp"
+					alt="La Grande Bastide - Cuisine">
+			</div>
+			<div class="swiper-slide"><img
+					src="{{ site.baseurl }}/assets/images/Salon équipé - La Grande Bastide - Le Lavandou.webp"
+					alt="La Grande Bastide - Salon équipé">
+			</div>
 		</div>
 	</div>
 </section>
