--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ leLavandou:
 			</div>
 			<div class="image">
 				<a href="{{ site.baseurl }}/t4-rez-de-jardin/">
-					<img src="{{ site.baseurl }}/assets/images/T4-rez-de-jardin-la-grande-bastide.jpg"
+					<img src="{{ site.baseurl }}/assets/images/Entrée - La Grande Bastide - Le Lavandou.webp"
 					alt="T4 rez-de-jardin - Le Lavandou" />
 				</a>
 			</div>
@@ -136,7 +136,7 @@ leLavandou:
 				</div>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/assets/images/Le-Lavandou-Grande-Plage-Crédit-Mairie-de-Le-Lavandou.jpg"
+				<img src="{{ site.baseurl }}/assets/images/Le-Lavandou-Grande-Plage-Crédit-Mairie-de-Le-Lavandou.webp"
 					alt="Le Lavandou - Grande Plage" />
 			</div>
 		</div>
