--- a/t4-rez-de-jardin.html
+++ b/t4-rez-de-jardin.html
@@ -77,21 +77,21 @@ services:
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <img
-            data-src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-terrasse.jpg"
+            data-src="{{ site.baseurl }}/assets/images/Entrée - La Grande Bastide - Le Lavandou.webp"
             class="swiper-lazy"
           />
           <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
         </div>
         <div class="swiper-slide">
           <img
-            data-src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-cuisine.jpg"
+            data-src="{{ site.baseurl }}/assets/images/Chambre 1 - La Grande Bastide - Le Lavandou.webp"
             class="swiper-lazy"
           />
           <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
         </div>
         <div class="swiper-slide">
           <img
-            data-src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-salon.jpg"
+            data-src="{{ site.baseurl }}/assets/images/Chambre 1 - bis - La Grande Bastide - Le Lavandou.webp"
             class="swiper-lazy"
           />
           <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
