Change home page image and contact maps

--- a/index.html
+++ b/index.html
@@ -54,20 +54,12 @@ leLavandou:
 	<div class="swiper">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide"><img
-				src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-terrasse.webp"
-				alt="La Grande Bastide - Terrasse">
-			</div>
-			<div class="swiper-slide"><img
-					src="{{ site.baseurl }}/assets/images/Entrée - La Grande Bastide - Le Lavandou.webp"
+					src="{{ site.baseurl }}/assets/images/La Grande Bastide - Location d'appartements au Lavandou.webp"
 					alt="La Grande Bastide - Entrée">
 			</div>
 			<div class="swiper-slide"><img
-					src="{{ site.baseurl }}/assets/images/Cuisine - La Grande Bastide - Le Lavandou.webp"
-					alt="La Grande Bastide - Cuisine">
-			</div>
-			<div class="swiper-slide"><img
-					src="{{ site.baseurl }}/assets/images/Salon équipé - La Grande Bastide - Le Lavandou.webp"
-					alt="La Grande Bastide - Salon équipé">
+				src="{{ site.baseurl }}/assets/images/La-Grande-Bastide-Location-appartements-Le-Lavandou-terrasse.webp"
+				alt="La Grande Bastide - Terrasse">
 			</div>
 		</div>
 	</div>
@@ -127,7 +119,7 @@ leLavandou:
 					{% for point in page.leLavandou %}
 					<div class="list-group-item list-group-item-action">
 					  <div class="d-flex w-100 justify-content-between">
-						<h5 class="mb-1">{{ point.name }}</h5>
+						<h3 class="mb-1">{{ point.name }}</h3>
 						<i class="fas fa-{{ point.icon }}"></i>
 					  </div>
 					  <p class="mb-1">{{ point.description }}</p>
