--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ leLavandou:
 			<div class="image">
 				<a href="{{ site.baseurl }}/t4-rez-de-jardin/">
 					<img src="{{ site.baseurl }}/assets/images/Entrée - La Grande Bastide - Le Lavandou.webp"
+					width="608"
 					alt="T4 rez-de-jardin - Le Lavandou" />
 				</a>
 			</div>
@@ -129,6 +130,7 @@ leLavandou:
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/assets/images/Le-Lavandou-Grande-Plage-Crédit-Mairie-de-Le-Lavandou.webp"
+					width="608"
 					alt="Le Lavandou - Grande Plage" />
 			</div>
 		</div>
