Use lazy loading and merge css Fix Swiperjs version to avoid redirection

--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@ leLavandou:
 					<p>Nous avons passé d’excellents moments entre amis dans notre location au
 						Lavandou, notamment dans le jardin autour du barbecue ! L’appartement est très grand, propre et
 						bien équipé.</p>
-					<p class="editable author">Thomas</p>
+					<p class="author">Thomas</p>
 				</blockquote>
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable">Vous avez une question ou un besoin particulier ?</h2>
+		<h2>Vous avez une question ou un besoin particulier ?</h2>
 		<div class="button alt"><a href="{{ site.baseurl }}/contact/">Contactez-nous</a></div>
 	</section>
 </div>
@@ -178,4 +178,4 @@ leLavandou:
 		});
 	}
 </script>
-<script async defer src="https://unpkg.com/swiper@7/swiper-bundle.min.js" onload="initSlider();"></script>
+<script async defer src="https://unpkg.com/swiper@7.0.8/swiper-bundle.min.js" onload="initSlider();"></script>
